@@ -1,4 +1,5 @@
 3.0.18.0 (open)
+ * Netty epoll IOExceptions caused by unclean client disconnects being logged at INFO (CASSANDRA-14909)
  * Unfiltered.isEmpty conflicts with Row extends AbstractCollection.isEmpty (CASSANDRA-14588)
  * Move TWCS message 'No compaction necessary for bucket size' to Trace level (CASSANDRA-14884)
  * Improve TokenMetaData cache populating performance avoid long locking (CASSANDRA-14660)
